# anemoi-inference

./: .venv-name  None  README.md  README_unconditional_diffusion.md  inference_sdedit.yaml  pyproject.toml
anemoi-transform/: .venv-name  README.md  pyproject.toml
anemoi-transform/anemoi_mf_transform_plugins/: fill_square.py  set_member.py  unfill_square.py
anemoi-transform/tests/: test_plugin.py
plugins/anemoi_mf_transform_plugins/: crop.py  fill_square.py
src/anemoi/inference/: config_gen_AROME_EDA_1.yaml  config_netcdf.yaml  config_test.yaml  gen_SDEdit_perturbed_state.yaml
src/anemoi/inference/config/: __init__.py
src/anemoi/inference/outputs/: extract_lam.py  plot.py
src/anemoi/inference/runners/: sdedit_scoring.py
